--- a/src/Components/Toolbar/Hamburger/Hamburger.module.css
+++ b/src/Components/Toolbar/Hamburger/Hamburger.module.css
@@ -96,8 +96,9 @@
     transition-delay: 0.075s;
 }
 
-@media (min-width: 599px) {
+@media (min-width: 600px) {
     .hamburger {
         display: none;
+        transition: none;
     }
 }
