--- a/src/Components/Toolbar/NavigationItems/NavigationItems.module.css
+++ b/src/Components/Toolbar/NavigationItems/NavigationItems.module.css
@@ -4,15 +4,35 @@ nav {
     width: 100%;
     height: 20%;
     align-items: center;
+    transition: 0;
   }
   
-  div {
+  /* div {
     flex: 1;
     min-width: 140px
-  }
+  } */
 
-@media (max-width: 599px) {
+
+@media (max-width: 600px) {
     nav {
-        display: none;
+        position: fixed;
+        width: 300px;
+        max-width: 70%;
+        height: auto;
+        top: 65px;
+        left: 0;
+        z-index: 200;
+        background-color: lightblue;
+        display: block;
+        transition: .5s ease-in-out;
+        transform: translateX(0px);
+    }
+
+    .Hide {
+        /* transition: 0s; */
+        opacity: 0;
+        transform: translateX(-300px);
+        
     }
 }
+
