--- a/src/Components/Parallax/Parallax.module.scss
+++ b/src/Components/Parallax/Parallax.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/Stylesheets/variables.module';
+
 .Parallax {
     position: absolute;
     height: 100%;
@@ -15,16 +17,16 @@ div.Parallax {
 
 .pimg1, .pimg2, .pimg3 {
     position: relative;
-    opacity: .5;
     background-position: center;
-    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
 .pimg1 {
-    background-image: url('../../assets/images/cupcake-bg.jpg');
-    min-height: 100%;
+    
+    background-size: cover;
+    background-image: url('../../assets/images/brown-sugar-cupcake.jpg');
+    min-height: 60%;
 }
 
 .pimg2 {
@@ -33,7 +35,7 @@ div.Parallax {
 }
 
 .pimg3 {
-    background-image: url('../../assets/images/cupcake-bg.jpg');
+    background-image: url('../../assets/images/chocolate-cupcakes-bg-short.jpg');
     min-height: 400px;
 }
 
@@ -58,13 +60,19 @@ div.Parallax {
     width: 100%;
     text-align: center;
     color: black;
-    font-size: 27px;
-    letter-spacing: 8px;
-    text-transform: uppercase;
+    font-size: 6em;
+    letter-spacing: 1px;
 }
 
 .ptext .border {
-    background-color: #111;
-    color: white;
+    background: repeating-linear-gradient(
+        30deg,
+        #C4609866,
+        #C4609866, 20px,
+        #00C9AF99, 20px,
+        #00C9AF99 40px
+      );
+    color: #4C002E;
     padding: 29px;
+    font-family: 'arizonia';
 }
