--- a/src/Components/Toolbar/NavigationItems/NavigationItems.module.css
+++ b/src/Components/Toolbar/NavigationItems/NavigationItems.module.css
@@ -1,38 +1,56 @@
+.List {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    /* display: flex; */
+    vertical-align: center;
+}
 
-nav {
-    display: flex;
-    width: 100%;
-    height: 20%;
+.ListItem {
+    display: inline-block;
+    vertical-align: middle;
+    /* flex: 1; */
+}
+
+.Menu {
+    height: 100%;
     align-items: center;
-    transition: 0;
+    left: -300px
   }
-  
-  /* div {
-    flex: 1;
-    min-width: 140px
-  } */
 
 
-@media (max-width: 600px) {
-    nav {
+@media (max-width: 750px) {
+    .ListItem {
+        display: block;
+        position: relative;
+        margin: 0;
+        padding: 0;
+    }
+    .Menu {
         position: fixed;
         width: 300px;
-        max-width: 70%;
-        height: auto;
-        top: 65px;
-        left: 0;
+        max-width: 100%;
+        height: 100%;
+        top: 4em;
+        left: -300px;
         z-index: 200;
-        background-color: lightblue;
+        background-color: #DDD7C6;        
         display: block;
-        transition: .5s ease-in-out;
-        transform: translateX(0px);
+        transition: transform .4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        transform: translateX(300px);
+        padding-bottom: 20px;
+        /* box-shadow: 2px 2px 10px black; */
     }
 
     .Hide {
-        /* transition: 0s; */
-        opacity: 0;
-        transform: translateX(-300px);
+        transform: translateX(0px);
+        transition: transform .4s cubic-bezier(.75,-0.4,.26,1.55);
         
+    }
+
+    .ListItem {
+        text-align: left;
+        padding: 10px 30px;
     }
 }
 
