--- a/src/Components/Toolbar/Toolbar.module.css
+++ b/src/Components/Toolbar/Toolbar.module.css
@@ -1,36 +1,31 @@
 .ToolbarContainer {
     width: 100%;
-    height: 4em;
-    align-items: center;
+    height: 70px;
     display: flex;
     justify-content: center;
+    position: fixed;
+    z-index: 100;
+    background-color: #DDD7C6;
 }
 
 .Toolbar {
-    max-width: 700px;
+    max-width: 800px;
     width: 90%;
-    position: fixed;
+    position: relative;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
     padding: 0 20px;
     box-sizing: border-box;
     color: white;
+    height: 100%;
+    flex: 1;
+
 }
 
-.ToolbarContainer {
-        color: white;
-        background: repeating-linear-gradient(
-          45deg,
-          #974daa,
-          #974daa 10px,
-          #6d42a1 10px,
-          #6d42a1 20px
-        );
-}
-
-@media (max-width: 600px) {
+@media (max-width: 750px) {
     .Toolbar {
         width: 100%;
+        justify-content: space-between;
+
     }
 }
