--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,10 @@
   }
 }
 
+.App {
+
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -18,10 +22,13 @@
 .App-link {
   color: #61dafb;
 }
+body {
+}
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
+    color: white;
   }
   to {
     transform: rotate(360deg);
